# Aletheia

./: .gitignore  Brows.py  HeadControlUI.py  MouthMaster.py  README.md  README.zh-CN.md  demo_face_features.py  eyes.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_rule_mapper.py  servo.py
.hypothesis/constants/: 046aae4cf9d19bdd  04b2191b86b87e2c  0b80ca9e4c80b599  1a6c0600ea18574d  313301908706e444  3e23c0637101a9da  418c1d277f562e42  57416fa426fee326  6f040de9dfc4287f  81f70441876bda87  90ba80e91f719c53  ab8e2677a2db6619  b29c1361696e8df9  bce932a64ddc815c  c9f6caffc55af3e6  e1dcbdad27db60fe
.hypothesis/examples/002f7fb4769b314e/: 30247eeaab519c11  3668109308c810f1  (+2 more)
Test/: rpi_mediapipe_test.py  servo_fixed.py  servo_manual_test.py  servo_smooth.py
expression_control/: __init__.py  collector.py  config.py  controller.py  data.py  dataset.py  extractor.py  features.py  inference.py  protocol.py  serial_manager.py  smoother.py  trainer.py
expression_control/cli/: __init__.py  evaluate.py  export.py  run.py  train.py
expression_control/mappers/: __init__.py  base.py  liquid_s4_mapper.py  rule_mapper.py
expression_control/models/: __init__.py  config.py  liquid_s4.py  s4.py
expression_control/utils/: __init__.py
hardware_test/: Brows_debug.py  Brows_static.py  rpi_mediapipe_test.py  servo_range_test.py
software_expression_architecture/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
software_expression_architecture/components/: ControlPanel.tsx  LoadingScreen.tsx  RobotFace.tsx
software_expression_architecture/hooks/: useServoDynamics.ts
software_expression_architecture/services/: mediaPipeService.ts
tests/: __init__.py  test_angle_tolerance_properties.py  test_data_properties.py  test_feature_extraction_properties.py  test_inference_properties.py  test_integration_rpi5_pico.py  test_model_properties.py  test_performance_benchmarks.py  test_protocol_properties.py  test_smoother_properties.py
(+94 files in other folders)
